--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PMP Master Exam 2026 - PMBOK 8</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>PMP Master Exam 2026 | PMBOK 8 Edition</title>
     <style>
-      body { font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
-      .pmi-blue { color: #005C67; }
-      .bg-pmi-blue { background-color: #005C67; }
-      .border-pmi-blue { border-color: #005C67; }
-      .perspective { perspective: 1000px; }
-      .flip-card-inner {
-        transition: transform 0.6s;
-        transform-style: preserve-3d;
+      body {
+        margin: 0;
+        background-color: #020617;
+        color: #f8fafc;
+        overflow-x: hidden;
       }
-      .flipped { transform: rotateY(180deg); }
-      .flip-card-front, .flip-card-back {
-        backface-visibility: hidden;
+      #root {
+        min-height: 100vh;
       }
-      .flip-card-back { transform: rotateY(180deg); }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
-  <body class="bg-gray-50 text-gray-900">
+  <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
